Name:           ZhenyaBot
Version:        1.0
Cabal-Version:  >= 1.2
Author:         Jesse Frankley, Will Coster
Homepage:       https://github.com/numberten/zhenya_bot
Category:       Network
Synopsis:       An IRC bot with a passion for nonsense.
Build-Type:     Simple

Executable zhenya_bot
    ghc-options:    -W
    Main-Is:        Main.hs
    Build-Depends:  base
                 ,  bytestring              >=  0.9
                 ,  cmdargs                 >=  0.9
                 ,  containers              >=  0.4
                 ,  curl                    >=  1.3
                 ,  directory               >=  1.1
                 ,  download-curl           >=  0.1
                 ,  exceptions              >=  0.1
                 ,  filepath                >=  1.3
                 ,  hierarchical-clustering >=  0.4
                 ,  HTTP                    >=  4000
                 ,  lcs                     >=  0.2
                 ,  mtl                     >=  2.0
                 ,  network                 >=  2.3
                 ,  old-time                >=  1.1
                 ,  time                    >=  1.4
                 ,  random                  >=  1.0
                 ,  random-fu               >=  0.2
                 ,  regex-tdfa              >=  1.0
                 ,  regex-compat            >=  0.95
                 ,  strict                  >=  0.3
                 ,  tagsoup                 >=  0.12
                 ,  tokenize                >=  0.1
                 ,  transformers            >=  0.2
