Name:           ZhenyaBot
Version:        1.0
Cabal-Version:  >= 1.2
Author:         Jesse Frankley, Will Coster
Homepage:       https://github.com/numberten/zhenya_bot
Category:       Network
Synopsis:       An IRC bot with a passion for nonsense.
Build-Type:     Simple

Executable zhenya_bot
    ghc-options:    -W
    Main-Is:        Main.hs
    Build-Depends:  base
                 ,  bytestring              >=  0.9
                 ,  cmdargs                 >=  0.9
                 ,  containers              >=  0.4
                 ,  curl                    >=  1.3
                 ,  directory               >=  1.1
                 ,  download-curl           >=  0.1.4
                 ,  exceptions              >=  0.1
                 ,  filepath                >=  1.3
                 ,  hierarchical-clustering >=  0.4
                 ,  http-conduit            >=  1.9.5.1
                 ,  HTTP                    >=  4000.2.8
                 ,  lcs                     >=  0.2
                 ,  MissingH                >=  0.18.6
                 ,  mtl                     >=  2.0
                 ,  network                 >=  2.3
                 ,  old-time                >=  1.1
                 ,  random                  >=  1.0
                 ,  random-fu               >=  0.2
                 ,  regex-tdfa              >=  1.0
                 ,  split                   >=  0.1.1
                 ,  stm                     >=  2.4.2
                 ,  strict                  >=  0.3
                 ,  tagsoup                 >=  0.12
                 ,  time                    >=  1.4
                 ,  tokenize                >=  0.1
                 ,  transformers            >=  0.2
